# WinConsoleCalculator

./: CMakeLists.txt  README.md  arithmetic.cpp  arithmetic.h  controller.cpp  controller.h  errorHandling.cpp  errorHandling.h  execution.cpp  execution.h  main.cpp  psudo_code.txt
.cache/clangd/index/: arithmetic.c.C32C6036082A1FE2.idx  arithmetic.cpp.5BF80324CEB50A51.idx  arithmetic.cpp.CA3B046808B4C6E5.idx  arithmetic.cpp.FD1576E7148FD96E.idx  arithmetic.h.50872F585D6F25BA.idx  arithmetic.h.86565AD31382CCFC.idx  arithmetic.h.F8FA635E5A1E927A.idx  controller.c.8DC376DC0203A33C.idx  controller.cpp.0AB1AB33E007BE28.idx  controller.cpp.C475F292ED182F73.idx  controller.cpp.F732F3A9F1A3389A.idx  controller.h.068F52397FB7FD67.idx  controller.h.2BB31838C658991B.idx  controller.h.436D2F9D82579EDA.idx  main.cpp.1C71E2AEEC01479B.idx  main.cpp.2290AB29C2ED16D1.idx  main.cpp.41258D03A254ED11.idx
notes/: NESTED PARENTHESES.txt  debugging.txt  errors to check for.txt  later changes to this.txt  nestedParenNotes.txt
